Optimizing and reviewing code (part 2)